@@ -1,3 +1,7 @@
+2010-06-11  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* gdb.base/charset.c (main): Make sure malloc gets linked in.
+
 2010-06-11  Tom Tromey  <tromey@redhat.com>
 
 	PR gdb/9977, PR exp/11636::
